@@ -6,7 +6,7 @@
 
     <groupId>com.github.ozlerhakan</groupId>
     <artifactId>poiji</artifactId>
-  <version>3.1.3</version>
+    <version>3.1.4</version>
     <packaging>jar</packaging>
 
     <name>poiji</name>
@@ -52,8 +52,8 @@
 
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-enforcer-plugin.version>1.2</maven-enforcer-plugin.version>
-        <jdk.source>1.8</jdk.source>
-        <jdk.target>1.8</jdk.target>
+        <jdk.source>11</jdk.source>
+        <jdk.target>11</jdk.target>
 
         <maven.version>3.0.4</maven.version>
     </properties>
@@ -87,16 +87,6 @@
         <finalName>${project.artifactId}</finalName>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-<!--                    <argLine>${add.opens}</argLine>-->
-                    <argLine>-Djava.awt.headless=true</argLine>
-                    <argLine>-Duser.language=en -Duser.region=US</argLine>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -151,31 +141,12 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
+                            <source>11</source>
+                            <detectJavaApiLink>false</detectJavaApiLink>
                             <additionalparam>${javadoc.none}</additionalparam>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.3.0</version>
-                <configuration>
-                    <repoToken>${env.COVERALLS_TOKEN}</repoToken>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <format>xml</format>
-                    <maxmem>256m</maxmem>
-                    <aggregate>true</aggregate>
-                    <check/>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -207,17 +178,6 @@
 
     <profiles>
         <profile>
-            <id>java9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <!-- we need to open a specific package of a platform module to the unnamed module that uses deep reflection at runtime,
-                     currently this is allowed but deep reflection in the unnamed module will not be validated in a future release of JDK at runtime -->
-                <add.opens>--add-opens java.base/java.io=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</add.opens>
-            </properties>
-        </profile>
-        <profile>
             <id>javadoclint</id>
             <activation>
                 <jdk>[1.8,)</jdk>
@@ -227,25 +187,25 @@
             </properties>
         </profile>
         <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>doRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
+            <id>coverage</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>0.8.7</version>
                         <executions>
                             <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
+                                <id>default-prepare-agent</id>
                                 <goals>
-                                    <goal>sign</goal>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>jacoco-site</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>report</goal>
                                 </goals>
                             </execution>
                         </executions>
